个人中心 - 使用Popup弹层回显昵称或简介

--- a/src/pages/Profile/Edit/index.module.scss
+++ b/src/pages/Profile/Edit/index.module.scss
@@ -84,6 +84,10 @@
     }
   }
 
+  // .adm-popup-body-position-right {
+  //   left: 0;
+  // }
+
   .adm-picker-header {
     .adm-picker-header-button {
       font-size: 14px;
